--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   http: ^1.2.1
   geolocator: ^12.0.0
   geolocator_android: 4.5.5
+  crypto: ^3.0.3
+  mailer: ^6.1.0
+  network_info_plus: ^5.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,6 +63,7 @@ flutter:
       - assets/mauaPequeno.png
       - assets/maua.png
       - assets/mapa.jpg
+      - assets/ip.txt
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
